# omnicanal-demo-v1

./: .gitignore  README.md  context.md  list_aws_resources.ps1  recomendacion_1_arquitectura.md  response.json  test_flow.json
.claude/: settings.local.json
agentic-skincare-backend/: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  Dockerfile.container-lambda-legacy  README.md  pyproject.toml  requirements-agentcore.txt  requirements-lambda.txt  requirements.txt
agentic-skincare-backend/.agents/rules/: 01-arquitectura-general.md  02-contexto-prompts-schemas.md  03-rag-cache-tools.md  04-features-seguridad-testing.md  05-regla-promts.md
agentic-skincare-backend/.bedrock_agentcore/agentic_skincare_backend/: Dockerfile
agentic-skincare-backend/core/: estado_turno.py  main_graph.py  router.py  settings.py  state.py  turn_service.py
agentic-skincare-backend/entrypoints/: agentcore_app.py  lambda_handler.py  web.py
agentic-skincare-backend/features/diagnostico_sintomas/: graph.py
agentic-skincare-backend/features/info_productos/: graph.py
agentic-skincare-backend/infra/: agentcore-permissions-policy.json  agentcore-trust-policy.json  permissions-policy.json
agentic-skincare-backend/repositories/: models.py  session_repository.py
agentic-skincare-backend/scripts/: check_agentcore.ps1  create_dummy_pdf.py  create_gcp_service_account.ps1  deploy.ps1  deploy_agentcore.ps1  ingestar_pdfs.py  package_lambda.ps1  provision.ps1  provision_agentcore.ps1
agentic-skincare-backend/tests/: conftest.py  test_agentcore_app.py  test_estado_turno.py  test_lambda_handler.py  test_session_repository.py  test_turn_service.py
connect-nlu-router-menu/: .env.example  README.md  pyproject.toml  requirements-lambda.txt
connect-nlu-router-menu/infra/: permissions-policy.json
connect-nlu-router-menu/scripts/: deploy.ps1  package_lambda.ps1  provision.ps1  run_local.py
connect-nlu-router-menu/src/connect_nlu_router_menu/: graph.py  handler.py  models.py  settings.py
connect-nlu-router-menu/tests/: test_graph.py  test_handler.py
telegram-inbound-adapter/: .env.example  README.md  pyproject.toml
telegram-inbound-adapter/infra/: permissions-policy.json
telegram-inbound-adapter/infra/cloudflared/: .env.example  README.md  docker-compose.yml
telegram-inbound-adapter/scripts/: deploy.ps1  package_lambda.ps1  provision.ps1  provision_connect_flows.py  provision_queues_routing.ps1  run_local.py  run_local_logged.ps1  set_webhook.py
telegram-inbound-adapter/src/telegram_inbound_adapter/: handler.py  models.py  settings.py  validation.py
telegram-inbound-adapter/src/telegram_inbound_adapter/clients/: connect_client.py
telegram-inbound-adapter/src/telegram_inbound_adapter/repositories/: session_repository.py
telegram-inbound-adapter/tests/: conftest.py  test_chat_service.py  test_handler.py  test_session_repository.py  test_validation.py
(+23 files in other folders)
