[project]
name = "agentic-skincare-backend"
version = "0.1.0"
description = "LangGraph + Amazon Bedrock skincare assistant, deployed as a Lambda for F_IA_Ventas"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "moto[dynamodb,secretsmanager]>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
